--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,5 @@
 
 # Set the programming language for a file
  *.java linguist-language=Java
+ *.css linguist-language=CSS
+ *.py linguist-language=Python
