--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -97,7 +97,7 @@
             </execution>
           </executions>
           <configuration>
-            <mainClass>com.example.App</mainClass>
+            <mainClass>app.Main</mainClass>
           </configuration>
         </plugin>
 
