--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -31,6 +31,12 @@
       <type>pom</type>
     </dependency>
 
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>3.141.59</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.diirt.javafx</groupId>
