--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -83,6 +83,12 @@
       <version>5.0.0-beta.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+
     
     
   </dependencies>
