slide show news feature

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -192,6 +192,9 @@
           <groupId>com.google.cloud.tools</groupId>
           <artifactId>appengine-maven-plugin</artifactId>
           <version>2.2.0</version>
+          <configuration>
+            <projectId>542039080636</projectId>
+          </configuration>
         </plugin>
 
         <plugin>
