--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -114,7 +114,7 @@
             </execution>
           </executions>
           <configuration>
-            <mainClass>Discord.DiscordBot</mainClass>
+            <mainClass>discord.DiscordBot</mainClass>
           </configuration>
         </plugin>
 
@@ -132,7 +132,7 @@
                 <transformers>
                   <transformer
                           implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                    <mainClass>Discord.DiscordBot</mainClass>
+                    <mainClass>discord.DiscordBot</mainClass>
                   </transformer>
                 </transformers>
               </configuration>
