--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -97,6 +97,12 @@
       <version>13.0</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -226,8 +232,8 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <configuration>
-                  <source>14</source>
-                  <target>14</target>
+                  <source>16</source>
+                  <target>16</target>
               </configuration>
           </plugin>
       </plugins>
